Output of System.out is not printed to CMD on Windows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • internal
    • Affects Version/s: internal
    • Component/s: tools

      When running simple application from command line on Windows which was packaged with jpackger, then output is not displayed from this application.

      Command used to create bundle:
      jpackager.exe create-image --input input --output output --name hello --main-jar hello.jar --class hello.Hello --files hello.jar

      >output\hello\hello.exe
      Nothing is printed

      >java.exe -jar input\hello.jar
      Hello !!!

      This needs to be tested on OS X and Linux as well.

        1. Hello.java
          0.8 kB
          Alexander Matveev

            Assignee:
            Alexander Matveev
            Reporter:
            Alexander Matveev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: