8211299: Output of System.out is not printed to CMD on Windows

Submitten-by: almatvee

Reviewed-by: herrick, kcr